Fix issue with too long titles on smal screens.

--- a/assets/stylesheets/scss/base/_base.copy.scss
+++ b/assets/stylesheets/scss/base/_base.copy.scss
@@ -232,7 +232,7 @@
 	> time,
 	> table,
 	figcaption p {
-		hyphens: auto;
+		@extend %text-hyphen;
 	}
 
 	/**
@@ -243,7 +243,7 @@
 	 */
 
 	.text-no-hyphen {
-		hyphens: none;
+		@extend %text-no-hyphen;
 	}
 
 	/* Paragraphs
